col visibility, bugfixes

--- a/css/grid.css
+++ b/css/grid.css
@@ -21,14 +21,28 @@
 
 .grid-cell-heading,
 .grid-cell {
+  display: none;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
+.grid-cell {
+  cursor: default;
+}
+
+.grid-cell.is-editable {
+  cursor: text;
+}
+
 .grid-cell-input {
   display: block;
   width: 100%;
+}
+
+.grid-cell.is-visible,
+.grid-cell-heading.is-visible {
+  display: table-cell;
 }
 
 .grid-cell-heading {
@@ -48,6 +62,7 @@
   background: blue;
 }
 
+.grid-cell-heading-orderable,
 .grid-search-select,
 .grid-search-input,
 .grid-cell,
@@ -72,7 +87,7 @@ body {
 .grid-container {
   margin: 2em 0;
   border: 1px solid var(--color-primary-0);
-  border-radius: 3px;
+  border-radius: var(--border-radius);
   overflow: hidden;
 }
 
@@ -144,6 +159,10 @@ body {
   font-weight: 600;
 }
 
+.grid-cell-heading-orderable:hover {
+  background-color: color(var(--color-primary-0) shade(10%));
+}
+
 .grid-cell-heading-orderable {
   cursor: pointer;
 }
@@ -170,7 +189,7 @@ body {
 
 .grid-heading-is-order-asc,
 .grid-heading-is-order-desc {
-  background-color: color(var(--color-primary-0) shade(10%))
+  background-color: color(var(--color-primary-0) shade(10%));
 }
 
 .grid-cell-heading-name:before {
@@ -264,19 +283,26 @@ body {
   margin-top: -13px;
 }
 
-.grid-button-remove-filters {
-  display: none;
+.grid-button.left {
+  margin-right: 7px;
+}
+
+.grid-button {
   font-size: 12px;
   background: var(--color-secondary-1-0);
   padding: 3px var(--cell-spacing);
   margin-bottom: var(--cell-spacing);
   color: #ffffff;
   cursor: pointer;
-  float: left;
   line-height: 1.5;
-  padding: 3px 25px 3px 6px;
-  border-radius: 3px;
+  padding: 3px 6px;
+  border-radius: var(--border-radius);
+}
+
+.grid-button-remove-filters {
+  display: none;
   position: relative;
+  padding-right: 25px;
 }
 
 .grid-button-remove-filters-cross {
@@ -286,7 +312,7 @@ body {
   font-size: 16px;
   width: 23px;
   height: 23px;
-  line-height: 1.4;
+  line-height: 1.6;
   text-align: center;
 }
 
@@ -294,4 +320,49 @@ body {
 .is-selected:hover,
 .is-selected {
   background-color: color(var(--color-primary-0) tint(75%));
+}
+
+.grid-customcols-container:hover .grid-customcols-cols {
+  display: block;
+}
+
+.grid-customcols-container {
+    float: left;
+    line-height: 1;
+    position: relative;
+}
+
+.grid-customcols-cols {
+  min-width: 150px;
+    display: none;
+    position: absolute;
+    top: 23px;
+    left: 0;
+    padding: 5px 0;
+    z-index: 1;
+    background-color: #fff;
+    border: 1px solid color(var(--color-secondary-1-0) tint(50%));
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .2);
+    border-radius: var(--border-radius);
+}
+
+.grid-customcols-toggle {}
+
+.grid-container {
+    overflow: visible;
+}
+
+.grid-customcols-col.is-visible {
+  opacity: 1;
+}
+
+.grid-customcols-col {
+  opacity: .5;
+    text-align: left;
+    padding: 5px 8px;
+    cursor: pointer;
+}
+
+.grid-customcols-col:hover {
+    background-color: color(var(--color-secondary-1-0) tint(90%));
 }
